swagger auth functionallity
