# handler/middleware.go
@@ -3,11 +3,45 @@ package handler_todo
 import (
 	"errors"
 	"github.com/gin-gonic/gin"
+	"net/http"
+	"strings"
 )
 
 const (
 	listID = "id"
 )
+
+const (
+	authorizationHeader = "Authorization"
+	userCtx             = "userId"
+)
+
+func (h *Handler) userIdentity(c *gin.Context) {
+	header := c.GetHeader(authorizationHeader)
+	if header == "" {
+		newErrorResponse(c, http.StatusUnauthorized, "empty auth header")
+		return
+	}
+
+	headerParts := strings.Split(header, " ")
+	if len(headerParts) != 2 || headerParts[0] != "Bearer" {
+		newErrorResponse(c, http.StatusUnauthorized, "invalid auth header")
+		return
+	}
+
+	if len(headerParts[1]) == 0 {
+		newErrorResponse(c, http.StatusUnauthorized, "token is empty")
+		return
+	}
+
+	//userId, err := h.services.User.ParseToken(headerParts[1])
+	//if err != nil {
+	//	newErrorResponse(c, http.StatusUnauthorized, err.Error())
+	//	return
+	//}
+
+	//c.Set(userCtx, userId)
+}
 
 func GetUserId(c *gin.Context) (int, error) {
 	id, ok := c.Get(listID)
