# structs/authStruct.go
@@ -6,7 +6,12 @@ type User struct {
 	Password string `json:"password" binding:"required" db:"password"`
 }
 
-type UserAdd struct {
-	Username string `json:"username" binding:"required" db:"username"`
-	Password string `json:"password" binding:"required" db:"password"`
+type SignUpUser struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
+type SignInUser struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
 }
